# quasar

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  HOST_SUPPORT.md  Makefile  README.md  RELEASING.md  SECURITY.md  STYLE.md  TESTING.md  VERSIONING.md  rust-toolchain.toml
analysis/hir/: Cargo.toml
analysis/hir/src/: constraints.rs  db.rs  diagnostic.rs  has_one.rs  input.rs  items.rs  lib.rs  parse.rs  resolver.rs  scope.rs  workspace.rs
analysis/hir/tests/: constraints.rs  cross_file.rs  define_account.rs  has_one.rs  queries.rs
analysis/lsp/: Cargo.toml
analysis/lsp/src/: capabilities.rs  cargo_workspace.rs  diagnostics.rs  handlers.rs  lib.rs  main.rs  paths.rs  server.rs  snapshot.rs  vfs.rs
analysis/lsp/tests/: activation_gating.rs  capabilities.rs  closed_file_resolution.rs  completion_references_docsymbol.rs  constraint_features.rs  has_one_features.rs  hover_definition.rs  publish_diagnostics.rs  v1_final_capabilities.rs  wrap_up_batch.rs
analysis/syntax/: Cargo.toml
analysis/syntax/src/: account.rs  diagnostics.rs  lib.rs  span.rs  types.rs
analysis/syntax/tests/: account_grammar.rs  accounts_recovery.rs  byte_range.rs  recovery.rs
audit/: Cargo.toml
audit/src/: checks.rs  helpers.rs  lib.rs  parsers.rs
cli/: Cargo.toml  Readme.md
cli/src/: audit.rs  bpf_loader.rs  build.rs  build_lockfile.rs  cfg.rs  clean.rs  client.rs  config.rs  deploy.rs  dump.rs  error.rs  idl.rs  init.rs  inspect_asm.rs  inspect_validation.rs  keys.rs  lib.rs  lint.rs  main.rs  multisig.rs  new.rs  output.rs  program_keypair.rs  rpc.rs  style.rs  sync.rs  test.rs  toolchain.rs  update.rs  utils.rs  verify.rs
cli/src/init/: banner.rs  git.rs  mod.rs  scaffold.rs  templates.rs  types.rs
cli/src/profile/: aggregate.rs  budget.rs  dwarf.rs  elf.rs  index.html  mod.rs  output.rs  serve.rs  walk.rs
cli/tests/: command_taxonomy.rs  generated_client_baseline.rs  generated_clients_smoke.rs  idl_errors.rs  idl_golden.rs  idl_hash_verify.rs  idl_wire_baseline.rs  init_cli.rs  init_client_languages.rs  lint_cli.rs
cli/tests/goldens/: multisig.idl.json
derive/: Cargo.toml  README.md
derive/src/: account.rs  accounts.rs  client_macro.rs  ctx.rs  declare_program.rs  error_code.rs  event.rs  helpers.rs  ice.rs  idl.rs  instruction.rs  krate.rs  lib.rs  pda_precompute.rs  plan_snapshots.rs  program.rs  schema_ir.rs  seed_param.rs  seeds.rs  serialize.rs  snapshot_tests.rs
derive/src/account/: dynamic.rs  fixed.rs  layout.rs  methods.rs  mod.rs  one_of.rs  pod_dynamic.rs  seeds.rs  traits.rs
derive/src/accounts/: attrs.rs  client.rs  composition.rs  constraint.rs  evidence.rs  field_kind.rs  fields.rs  fields_process.rs  fields_support.rs  init.rs  instruction_args.rs  instruction_args_codegen.rs  mod.rs  plan.rs
derive/src/declare_program/: readers.rs
derive/src/program/: dispatch.rs  event_authority.rs  idl.rs  mod.rs  model.rs  scan.rs  spec.rs
derive/src/snapshots/: account_dynamic.rs  account_fixed.rs  accounts_basic_mut_signer.rs  accounts_behavior_group.rs  accounts_close.rs  accounts_composite.rs  accounts_dup.rs  accounts_init_payer.rs  accounts_ix_args_dynamic.rs  accounts_ix_args_fixed.rs  accounts_optional.rs  accounts_realloc.rs  error_code_basic.rs  event_basic.rs  instruction_fixed_and_dynamic.rs  plan_basic_mut_signer.txt  plan_behavior_group.txt  plan_close.txt  plan_composite.txt  plan_dup.txt  plan_init_payer.txt  plan_ix_args_dynamic.txt  plan_ix_args_fixed.txt  plan_optional.txt  plan_realloc.txt  plan_realloc_implies_mut.txt  plan_seed_kinds.txt  program_dispatch_two_ix.rs  seeds_basic.rs  serialize_fixed.rs
derive/tests/: account_meta_signers.rs  builder_address_introspection.rs  deny_domain_strings.rs  deny_lang_path.rs  rename_consumer.rs
derive/tests/compatibility-v0.1.0/: README.md
derive/tests/compile_pass/: account_arrays.rs  account_migrate.rs  account_signers.rs  ata_init_without_rent.rs  custom_behavior_check.rs  custom_behavior_exit.rs  custom_behavior_init.rs  derive_seeds.rs  init_interface_account_typed_seed.rs  instruction_address_validation.rs  namespaced_behavior.rs  plain_account.rs  pre_associated_token_init.rs  uninit_spl.rs
derive/tests/rename-consumer/: Cargo.toml
examples/anchor-v2-vault/: Cargo.toml
examples/anchor-v2-vault/src/: lib.rs  tests.rs
examples/escrow/: Cargo.toml
examples/escrow/client/: Cargo.toml
examples/multisig/: Cargo.toml
examples/pyth-oracle/: Cargo.toml
examples/upstream-multisig/: Cargo.toml
idl/: Cargo.toml  README.md
idl/schema/: Cargo.toml  README.md
idl/src/: audit.rs  codegen.rs  codegen_ts.rs  lib.rs  main.rs  types.rs
idl/src/lint/: fix.rs  (+13 more)
idl/tests/: abi_hash_contract.rs  audit_plan.rs  codegen_golden.rs  hash_contract.rs  lint.rs  lint_surface.rs  parser.rs  spec_version.rs  upgrade_safety.rs
lang/fuzz/: .gitignore  Cargo.toml
metadata/: Cargo.toml  README.md
metadata/kani/: codec.rs  instructions.rs  state.rs
metadata/src/: account_init.rs  codec.rs  constants.rs  init.rs  lib.rs  pda.rs  program.rs  state.rs  validate.rs
metadata/tests/: miri.rs
profile/: Cargo.toml  README.md  index.html
profile/src/: aggregate.rs  budget.rs  dwarf.rs  lib.rs  main.rs  output.rs  serve.rs
schema/: Cargo.toml  README.md
schema-canonical/: Cargo.toml  SPEC.md
schema-canonical/src/: decode.rs  encode.rs  error.rs  lib.rs  wire.rs
schema-canonical/tests/: fuzz_smoke.rs  roundtrip_synthetic.rs  roundtrip_test_program.rs
schema/src/: lib.rs
solana-compiler-builtins/: Cargo.toml  README.md
solana-compiler-builtins/src/: lib.rs
spl/: Cargo.toml  README.md
spl/kani/: instructions.rs
spl/src/: associated_token.rs  exit.rs  init.rs  interface.rs  lib.rs  prelude.rs  token.rs  token_2022.rs  validate.rs
spl/tests/: compile_fail.rs  miri.rs
test/: Cargo.toml  README.md
test/derive/: Cargo.toml  README.md
test/src/: assertions.rs  backend.rs  fixture.rs  fixtures.rs  lib.rs  outcome.rs  setup.rs  types.rs  world.rs
test/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tests.json
tools/release/: Cargo.toml
(+850 files in other folders)
