[workspace]
resolver = "3"
members = [
    "lang",
    "derive",
    "spl",
    "idl",
    "idl/schema",
    "test",
    "test/derive",
    "examples/*",
    "examples/*/client",
    "tests/programs/*",
    "tests/suite",
    "cli",
]

[workspace.dependencies]
heck = "0.5"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/blueshift-gg/quasar"
homepage = "https://quasar-lang.com"
authors = ["Leonardo Donatacci <leo@blueshift.gg>", "Dean Little <dean@blueshift.gg>"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(kani)', 'cfg(kani_ra)'] }
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"

[workspace.metadata.kani.flags]
tests = true

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# TEMPORARY: until zeropod >=0.3.4 (solana-address <3) is published.
# Publish zeropod before any quasar release, then delete this patch.
[patch.crates-io]
zeropod = { path = "vendor/zeropod/zeropod" }
zeropod-derive = { path = "vendor/zeropod/zeropod-derive" }
