[package]
name = "quasar-audit"
description = "Security auditor for Quasar Solana programs — Sealevel attack detection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "quasar_audit"
path = "src/lib.rs"

[dependencies]
quasar-idl = { path = "../idl" }
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "parsing", "visit"] }
