[package]
name = "quasar-cli"
description = "CLI for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/quasar-cli/0.1.0"
readme = "Readme.md"
keywords = ["solana", "quasar", "sbf", "cli", "code-generation"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[[bin]]
name = "quasar"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
quasar-idl = { version = "=0.1.0", path = "../idl" }
quasar-schema = { version = "=0.1.0", path = "../schema" }
quasar-profile = { version = "=0.1.0", path = "../profile" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
toml = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"
dirs = "6"
indicatif = "0.18.4"
clap_complete = "4.6.0"
shlex = "1"
tempfile = "3"

[dev-dependencies]
quasar-idl = { path = "../idl" }

[lib]
doctest = false
