[package]
name = "quasar-cli"
description = "CLI for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/quasar-cli/0.1.0"
readme = "Readme.md"
keywords = ["solana", "quasar", "sbf", "cli", "code-generation"]
categories = ["command-line-utilities", "development-tools"]
include = ["/src/**", "/Readme.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[lints]
workspace = true

[[bin]]
name = "quasar"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
quasar-idl = { version = "=0.1.0", path = "../idl" }
goblin = "0.9"
addr2line = "0.24"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
memmap2 = "0.9"
rustc-demangle = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
toml = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"
dirs = "6"
indicatif = "0.18.4"
clap_complete = "4.6.0"
shlex = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
expect-test = "1"
quasar-idl = { path = "../idl" }

[lib]
doctest = false
