[package]
name = "quasar-idl"
description = "IDL generator for the Quasar Solana framework with discriminator collision detection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/quasar-idl/0.1.0"
readme = "README.md"
keywords = ["solana", "quasar", "idl", "code-generation"]
categories = ["development-tools", "data-structures"]
include = ["/src/**", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[lints]
workspace = true

[lib]
name = "quasar_idl"
path = "src/lib.rs"
doctest = false

[dependencies]
bs58 = "0.5.1"
quasar-schema = { version = "=0.1.0", path = "../schema" }
quasar-idl-schema = { version = "=0.1.0", path = "schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
expect-test = "1"
tempfile = "3"
