[package]
name = "quasar-profile"
description = "SBF binary profiler for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/quasar-profile/0.1.0"
readme = "README.md"
keywords = ["solana", "sbf", "profiler", "flamegraph", "quasar"]
categories = ["development-tools::profiling", "development-tools"]

[lints]
workspace = true

[dependencies]
goblin = "0.9"
addr2line = "0.24"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }
memmap2 = "0.9"
rustc-demangle = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[lib]
doctest = false
