[package]
name = "solana-compiler-builtins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Compiler runtime builtins required by Quasar SBF programs"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/solana-compiler-builtins/0.1.0"
readme = "README.md"
keywords = ["solana", "sbf", "compiler-builtins", "no-std"]
categories = ["no-std", "embedded"]

[lints]
workspace = true
