[package]
name = "solana-compiler-builtins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Compiler runtime builtins required by Quasar SBF programs"
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
