[package]
name = "quasar-spl"
description = "SPL Token program CPI and zero-copy account types for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/quasar-spl/0.1.0"
readme = "README.md"
keywords = ["solana", "spl-token", "token-2022", "cpi", "zero-copy"]
categories = ["no-std", "api-bindings"]
include = ["/src/**", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[lints]
workspace = true

[features]
debug = []

[dependencies]
quasar-lang = { version = "=0.1.0", path = "../lang" }
solana-address = { version = ">=2.2, <3", features = ["copy"] }

[dev-dependencies]
solana-program-error = "3.0.0"
trybuild = "1"

[lib]
test = false
doctest = true
