[package]
name = "quasar-test"
description = "Project-aware QuasarSVM testing utilities for Quasar programs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/quasar-test/0.1.0"
readme = "README.md"
keywords = ["solana", "testing", "svm", "quasar", "blockchain"]
categories = ["development-tools"]
include = ["/src/**", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[lints]
workspace = true

[dependencies]
base64 = "0.22"
quasar-svm = "=0.1.0"
quasar-lang = { path = "../lang", version = "=0.1.0" }
quasar-test-derive = { path = "derive", version = "=0.1.0" }
serde_json = "1"
spl-token = { version = "=9.0.0", default-features = false, features = ["no-entrypoint"] }

[lib]
doctest = true

[dev-dependencies]
tempfile = "3"
