[package]
name = "quasar-test"
description = "Project-aware QuasarSVM testing utilities for Quasar programs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/quasar-test/0.1.0"
readme = "README.md"
keywords = ["solana", "testing", "svm", "quasar", "blockchain"]
categories = ["development-tools"]
include = ["/src/**", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[lints]
workspace = true

[dependencies]
base64 = "0.22"
litesvm = { version = "0.15", features = ["persistence-internal"] }
quasar-lang = { path = "../lang", version = "=0.1.0" }
quasar-test-derive = { path = "derive", version = "=0.1.0" }
serde_json = "1"
solana-account = "4.3"
# Pinned: 3.2.0 bumped to wincode 0.6.0, which mismatches litesvm 0.15's
# wincode 0.5.x sysvar (get_sysvar/set_sysvar) API. 3.1.1 keeps wincode 0.5.x.
solana-clock = "=3.1.1"
solana-compute-budget = "4.1"
solana-fee-structure = "3"
solana-instruction = "3.4"
solana-instruction-error = "2.4"
solana-message = "4"
solana-pubkey = { version = "4.2", features = ["curve25519"] }
solana-rent = "4.2"
solana-sdk-ids = "3.1"
solana-signature = "3.4"
solana-transaction = "4.1"
solana-transaction-error = "3.3"
spl-token = { version = "=9.0.0", default-features = false, features = ["no-entrypoint"] }

[lib]
doctest = true

[dev-dependencies]
tempfile = "3"
