[package]
name = "quasar-test"
description = "Project-aware QuasarSVM testing utilities for Quasar programs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/quasar-test/0.1.0"
readme = "README.md"
keywords = ["solana", "testing", "svm", "quasar", "blockchain"]
categories = ["development-tools"]
include = ["/src/**", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]

[lints]
workspace = true

[dependencies]
# The SVM harness lives in Parallax; quasar-test is a thin adapter that
# re-exports its surface and layers quasar-lang typed-state and PDA sugar on top.
parallax-svm = { git = "https://github.com/blueshift-gg/parallax", rev = "5f0ea26" }
quasar-lang = { path = "../lang", version = "=0.1.0" }
quasar-test-derive = { path = "derive", version = "=0.1.0" }
# Used only by the strict typed `write`, to install state rent-exempt.
solana-rent = "4.2"

[lib]
doctest = true
