[package]
name = "quasar-hir"
description = "Quasar semantic resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
quasar-syntax = { path = "../syntax" }
salsa = "0.26"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
