[package]
name = "quasar-lsp"
description = "Quasar language server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "quasar-lsp"
path = "src/main.rs"

[dependencies]
quasar-syntax = { path = "../syntax" }
quasar-hir = { path = "../hir" }
lsp-server = "0.7"
lsp-types = "0.97"
salsa = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
threadpool = "1.8"
num_cpus = "1"
crossbeam-channel = "0.5"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
cargo_metadata = "0.18"
thiserror = "1"
