[package]
name = "quasar-syntax"
description = "Quasar parser and AST"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
