[package]
name = "quasar-escrow"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[lints]
workspace = true

[features]
alloc = []
client = []
debug = []
idl-build = ["quasar-lang/idl-build"]

[dependencies]
quasar-lang = { path = "../../lang" }
quasar-spl = { path = "../../spl" }

[dev-dependencies]
quasar-test = { path = "../../testing" }
