[package]
name = "quasar-multisig"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[lints]
workspace = true

[features]
alloc = []
client = []
debug = []
idl-build = ["quasar-lang/idl-build"]

[dependencies]
quasar-lang = { path = "../../lang" }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
quasar-multisig-client = { path = "client" }
wincode = { version = "0.4", features = ["derive"] }
quasar-test = { path = "../../test" }
