[package]
name = "quasar-idl-schema"
description = "Public IDL JSON schema types for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/quasar-idl-schema/0.1.0"
readme = "README.md"
keywords = ["solana", "quasar", "idl", "json-schema"]
categories = ["development-tools", "data-structures"]

[lints]
workspace = true

[lib]
name = "quasar_idl_schema"
path = "src/lib.rs"
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
