[package]
name = "quasar-multisig-client"
version = "0.1.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
quasar-lang = { path = "../../../lang" }
wincode = { version = "0.5", features = ["derive"] }
solana-address = { version = "2", features = ["curve25519", "wincode"] }
solana-instruction = "3"

[lib]
doc = false
test = false
doctest = false
