[package]
name = "quasar-test-events"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
test = false
doctest = false

[lints]
workspace = true

[dependencies]
quasar-lang = { path = "../../../lang" }
quasar-derive = { path = "../../../derive" }

[features]
default = ["alloc", "cpi"]
cpi = []
alloc = []
debug = []
idl-build = ["quasar-lang/idl-build"]
